@@ -532,6 +532,46 @@ objcsel_repr(PyObject* _self)
 	return rval;
 }
 
+static PyObject* objcsel_richcompare(PyObject* a, PyObject* b, int op)
+{
+	if (op == Py_EQ || op == Py_NE) {
+		if (PyObjCNativeSelector_Check(a) && PyObjCNativeSelector_Check(b)) {
+			PyObjCNativeSelector* sel_a = (PyObjCNativeSelector*)a;
+			PyObjCNativeSelector* sel_b = (PyObjCNativeSelector*)b;
+			int same = 1;
+
+			if (sel_a->sel_selector != sel_b->sel_selector) {
+				same = 0;
+			}
+			if (sel_a->sel_class != sel_b->sel_class) {
+				same = 0;
+			}
+			if (sel_a->sel_self != sel_b->sel_self) {
+				same = 0;
+			}
+			if ((op == Py_EQ && !same) || (op == Py_NE && same)) {
+				Py_INCREF(Py_False);
+				return Py_False;
+			} else {
+				Py_INCREF(Py_False);
+				return Py_True;
+			}
+
+		} else {
+			if (op == Py_EQ) {
+				Py_INCREF(Py_False);
+				return Py_False;
+			} else {
+				Py_INCREF(Py_False);
+				return Py_True;
+			}
+		}
+	} else {
+		PyErr_SetString(PyExc_TypeError, "Cannot use '<', '<=', '>=' and '>' with objc.selector");
+		return NULL;
+	}
+}
+
 
 static PyObject*
 objcsel_call(PyObject* _self, PyObject* args, PyObject* kwds)
@@ -746,7 +786,7 @@ PyTypeObject PyObjCNativeSelector_Type = {
  	0,					/* tp_doc */
  	0,					/* tp_traverse */
  	0,					/* tp_clear */
-	0,					/* tp_richcompare */
+	objcsel_richcompare,			/* tp_richcompare */
 	0,					/* tp_weaklistoffset */
 	0,					/* tp_iter */
 	0,					/* tp_iternext */
